matrix-quotes/matrix-quotes-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: matrix-quotes
  labels:
    app: matrix-quotes
spec:
  selector:
    matchLabels:
      app: matrix-quotes
  template:
    metadata:
      labels:
        app: matrix-quotes
    spec:
      containers:
      - name: webapp
        image: quay.io/kuadrant/authorino-examples:matrix-quotes
        imagePullPolicy: Always
        env:
        - name: ENDPOINT
          value: http://matrix-quotes.127.0.0.1.nip.io:8000
  replicas: 1
---
apiVersion: v1
kind: Service
metadata:
  name: matrix-quotes
spec:
  selector:
    app: matrix-quotes
  ports:
    - name: server
      port: 3000
      protocol: TCP
